# PersonalAssistant

./: .gitignore  LICENSE  MANIFEST.in  README.md  contact_book.pickle  documentation.txt  notes.pickle  pyproject.toml
CLBOT_PY4POWER/: book.py  functions.py  input_checker.py  main.py  notes.py
Personal_assistant_PY4POWER/: book.py  functions.py
Personal_assistant_Py4Power/: book.py  functions.py  input_checker.py  main.py
app/: Book.py  Notes.py  console_output.py  constants.py  functions.py  input_checker.py  main.py
src/Command_Project_PY4POWER/: book.py  functions.py  input_checker.py  main.py  notes.py
